JOHNZON-158 ensure we resize correctly the buffer even when sizes of the internal buffers are not in the expected area + ensure we call close correctly in terms of scope to avoid surprises and leaking buffers